wrap router-view with main element, fix css for html element

--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -1,7 +1,7 @@
 html {
     @include font-style-text;
     line-height: 1.5;
-    color: $color-grey;
+    color: #fff;
 }
 
 h1,
